<resources>
    <string name="app_name">Lab_03_Ex2</string>
    <string name="action_settings">Settings</string>
    <string name="msgRadioButton">What type of coffee?</string>
    <string name="type1">Latte</string>
    <string name="type2">Mocha</string>
    <string name="type3">Cappuccino</string>
    <string name="msgCheckBox">What else in your coffee?</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="pay">Pay</string>
</resources>

